[workspace]
members = [
"blocks",
"blocks_one",
"blocks_query"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
hex = "0.4.3"
async-std = { version = "1.9.0", features = ["attributes"] }
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
web3 = {version = "0.19.0"}
serde_json = "1.0.116"
tokio = "1.37.0"
actix-web = "4.5.1"
futures = "0.3.30"
dotenv = "0.15.0"
regex = "1.10.4"
ethabi = "18.0.0"
flate2 = "1.0.30"
lazy_static = "1.4.0"