[package]
name = "blocks_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = {workspace =true}
async-std = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true } # Needed for using chrono datetime in doc
# tokio = { workspace = true }
chrono = { workspace = true } # Used for setting DateTimes
serde = { workspace = true } # Used in the Map Data into Structs section
web3 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
ethabi = { workspace = true }
